--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <!-- <link rel="stylesheet" href="css/login.css"> -->
 </head>
 <body>
+    <!-- <div class="floating-shapes">
+        <div class="shape shape-1"></div>
+        <div class="shape shape-2"></div>
+        <div class="shape shape-3"></div>
+      </div> -->
     <main class="auth-wrapper">
         <section class="auth-container">
             <h1 id="authTitle">Sign In</h1>
