--- a/homepage.html
+++ b/homepage.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+
 </head>
 <body>
     <header>
@@ -153,6 +155,7 @@
             <i class="fa-brands fa-whatsapp"></i>
         </a>
     </div>
+    
 
     <script type="module" src="firebase-config.js"></script>
     <script type="module" src="JavaScript/chat.js"></script>
